# PRINSEQ-plus-plus

./: .gitignore  CITATIONS.md  Doxyfile  Makefile.in  README.md  README.md.in  autogen.sh  changelog  configure.ac
PrinSeq/: Fasta.cpp  Fasta.h  Fastq.cpp  Fastq.h  Filters.cpp  Filters.h  FormatCheck.cpp  FormatCheck.h  Options.cpp  Options.h  PrinSeq.1  Qual.cpp  Qual.h  SequenceData.cpp  SequenceData.h  main.cpp
PrinSeq.xcodeproj/: project.pbxproj
PrinSeq.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PrinSeq.xcodeproj/xcuserdata/jeffreysadural.xcuserdatad/xcschemes/: PrinSeq.xcscheme  xcschememanagement.plist
figures/: .gitignore  plot_figure1.ipynb  ram_run1  run1.ipynb  run1.py  run2.ipynb  run2.py  sup_table2.txt  timing_run1  timing_run2
figures/.ipynb_checkpoints/: plot_figure1-checkpoint.ipynb  run2-checkpoint.ipynb
m4/: ax_boost_filesystem.m4  ax_boost_iostreams.m4  ax_boost_system.m4
scr/: ppgetops.cpp
src/: .gitignore  Makefile.in  README  main.cpp  makefile  ppgetops  pprinseqc.cpp  reads.cpp  reads.h  test_F.fasta  test_F.fastq  test_R.fasta  test_R.fastq  verbose.cpp  verbose.h
